--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
 
 	<name>cassandra-fs</name>
 
-  <parent>
-    <groupId>com.semantico.sipp2</groupId>
-    <artifactId>sipp2-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../sipp2-parent/pom.xml</relativePath>
-  </parent>
+	<parent>
+		<groupId>com.semantico.sipp2</groupId>
+		<artifactId>sipp2-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../sipp2-parent/pom.xml</relativePath>
+	</parent>
 
 	<dependencies>
 		<dependency>
@@ -59,6 +59,12 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.semantico.sipp2</groupId>
+			<artifactId>cassandra-embedded-testing</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
