wrote tests that exercise the setup of cassandra facade and handle incorrect keysapce configurations, refactored some test code to allow for more low level control of the keyspace

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,5 @@
-cassandra.client.hosts=localhost:9160
+cassandra.client.hosts=localhost:19160
+cassandra.cluster.name=TestCluster
 cassandra.client.exhaustedPolicy = WHEN_EXHAUSTED_FAIL
 cassandra.client.maxActive=50
 cassandra.client.maxIdle=5
