--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
 		<relativePath>../sipp2-parent/pom.xml</relativePath>
 	</parent>
 
+	<properties>
+		<java-version>1.6</java-version>
+		<org.springframework-version>3.0.4.RELEASE</org.springframework-version>
+	</properties>
 	<reporting>
 		<plugins>
 			<plugin>
@@ -36,15 +40,34 @@
 			<artifactId>hector-core</artifactId>
 			<version>0.8.0-1</version>
 		</dependency>
-		<dependency>
+<!--		<dependency>  Hadoop FS (currently classes commented out and totally untested) 
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
 			<version>0.20.2</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.0.1</version>
+		</dependency>
+		<!-- Servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${org.springframework-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframework-version}</version>
+			<scope>test</scope>
 		</dependency>
 		<!-- Override Dependency Conflict -->
 		<dependency>
@@ -70,6 +93,12 @@
 			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework-version}</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>com.semantico.sipp2</groupId>
 			<artifactId>embedded-cassandra-utils</artifactId>
