URL to URI conversion for config file is still buggy, pushing to jenkins for another test

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,5 +1,5 @@
 # Setup logging
-log4j.rootLogger = DEBUG, stderr
+log4j.rootLogger = INFO, stderr
 
 # Enable this if you want output in catalina.out.
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
