--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 		<relativePath>../sipp2-parent/pom.xml</relativePath>
 	</parent>
 
-<properties>
-<storage-config>conf</storage-config>
-</properties>
+	<properties>
+		<storage-config>conf</storage-config>
+	</properties>
 	<reporting>
 		<plugins>
 			<plugin>
@@ -103,6 +103,14 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.1</version>
+		</dependency>
+		<!-- Snappy Compression -->
+		<dependency>
+			<groupId>org.xerial.snappy</groupId>
+			<artifactId>snappy-java</artifactId>
+			<version>1.0.3.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 		<!-- Logging -->
 		<dependency>
