made it possible to configure the total amount of memory used by the client threads, started documentation in the configuration files

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,10 +1,36 @@
+
+## hosts - list of hosts seperated by ',' default is localhost:9160
 cassandra.client.hosts=localhost:19160
+
+## cluster.name, name of the cluster to connect to. default is 'FS_Cluster'
 cassandra.cluster.name=TestCluster
-cassandra.client.exhaustedPolicy = WHEN_EXHAUSTED_FAIL
-cassandra.client.maxActive=3
-cassandra.client.maxIdle=3
+
+## maxWaitTimeWhenExhausted - the time in ms to wait before giving up when there are no more client threads available
 cassandra.client.maxWaitTimeWhenExhausted = 60000
+
 cassandra.client.cassandraThriftSocketTimeout = 60000
 
+## replicaPlacementStrategy - a strategy class to place replicas in 'the ring'
 cassandra.client.replicaPlacementStrategy = org.apache.cassandra.locator.OldNetworkTopologyStrategy
+
+## replicationFactor - how many times each peice of data is replicated in the cluster
 cassandra.client.replicationFactor = 1
+
+#######-Memory Usage-########
+#Each cassandra client thread has its own buffer and so can consume as much memory as 1 block
+#You can either specify the max active and idle or the amount of memory to be used.
+#The more memory available, the faster the upload / download speed is
+
+## blockSize - Size in bytes that a file is split into.
+cassandra.client.blockSize=1048576
+
+## maxActive - max number of asychronous requests that are made to cassandra before it blocks. bufferLimit = blockSize*maxActive
+#cassandra.client.maxActive=1
+
+## maxIdle - number of client threads that can be idle, more than this and their memory is released
+#cassandra.client.maxIdle=1
+
+## bufferLimit - Max Size in bytes of the memory used by the client threads. maxActive = bufferLimit/blockSize
+cassandra.client.bufferLimit=31457280
+
+#############################
