update cassandra-utils dependency
Change-Id: Ief569e5c1e731924cfde0b2a939de3ffa9a1fbf6

--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.semantico.sipp2</groupId>
-			<artifactId>embedded-cassandra-utils</artifactId>
+			<artifactId>cassandra-utils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
