Added notices to comply with the apache 2.0 license, a small amount of refactoring, added the stress tests class (it needs to be run manually and has been commented out so jenkins wont run them)

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@ conf/.svn
 target
 tmp
 src/test/resources/bigDataFile.dat
-src/test/java/com/semantico/cassandra/fs/tests/StressTest.java
+src/test/resources/readResults.txt
+src/test/resources/read2Results.txt
+src/test/resources/write2Results.txt
+src/test/resources/writeResults.txt
