--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.semantico</groupId>
+	<groupId>com.semantico.sipp2</groupId>
 	<artifactId>cassandra-fs</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>cassandra-fs</name>
-	<url>http://maven.apache.org</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
+  <parent>
+    <groupId>com.semantico.sipp2</groupId>
+    <artifactId>sipp2-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../sipp2-parent/pom.xml</relativePath>
+  </parent>
 
 	<dependencies>
 		<dependency>
